fixing white spaces

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 body {
@@ -15,6 +16,8 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
+	height: 100%;
+	overflow: hidden;
 }
 
 main {
